--- a/frontend/src/app/_components/Header/header.module.css
+++ b/frontend/src/app/_components/Header/header.module.css
@@ -23,8 +23,8 @@
 }
 
 .logo {
-  font-family: "Bitter", serif;
-  font-weight: 900;
+  font-family: var(--font-poppins);
+  font-weight: 500;
   font-size: 30px;
   position: absolute;
   top: 24px;
