--- a/frontend/src/app/_compositions/find-crew/CrewList/crewList.module.css
+++ b/frontend/src/app/_compositions/find-crew/CrewList/crewList.module.css
@@ -10,6 +10,7 @@
   border-radius: 16px;
   border: 1px solid rgb(225, 225, 225);
   margin-bottom: 8px;
+  position: relative;
 }
 
 .listItemWrapper {
