--- a/frontend/src/app/_components/Header/header.module.css
+++ b/frontend/src/app/_components/Header/header.module.css
@@ -4,9 +4,17 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  padding: 24px 0;
-  border-bottom: 1px solid black;
+  background-color: black;
+}
+
+.contentWrapper {
+  width: 100%;
+  max-width: 1500px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
   position: relative;
+  padding: 24px 0;
 }
 
 .itemInlineWrapper {
@@ -19,7 +27,7 @@
 .item {
   font-weight: 200;
   font-size: 24px;
-  color: black;
+  color: white;
 }
 
 .logo {
@@ -27,8 +35,9 @@
   font-weight: 500;
   font-size: 30px;
   position: absolute;
-  top: 24px;
+  top: 18px;
   left: 24px;
+  color: white;
 }
 
 @media (max-width: 800px) {
