--- a/frontend/src/app/_compositions/find-crew/CategoryList/categoryList.module.css
+++ b/frontend/src/app/_compositions/find-crew/CategoryList/categoryList.module.css
@@ -1,3 +1,38 @@
 .listWrapper {
   display: inline-flex;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 600px;
+  margin-bottom: 1rem;
+  gap: 16px;
+}
+
+.categoryItemWrapper {
+  flex: 1;
+  height: 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+  border-radius: 16px;
+}
+
+.categoryItemWrapper:hover {
+  border: 1px solid black;
+  cursor: pointer;
+  transition: cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.categoryTitle {
+  font-family: var(--font-poppins);
+  color: black;
+}
+
+.selectedItem {
+  background-color: black;
+}
+
+.selectedTitle {
+  color: white;
 }
