--- a/frontend/src/app/find-crew/findCrew.module.css
+++ b/frontend/src/app/find-crew/findCrew.module.css
@@ -1,6 +1,7 @@
 .pageWrapper {
   width: 100%;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   min-height: calc(100vh)-78px;
